--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ body{
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    font-size: 16px; 
     max-width: 100vw; 
     overflow-x: hidden;
 }
@@ -26,9 +25,32 @@ nav {
     color: white;
     padding: 10px;
     text-decoration: none;
+    margin-right: 40px;
 }
 
 .menu a:hover {
     color: #00000075;
     border-radius: 5px;
+}
+
+.banner {
+    margin-top: 0.1px;
+    background-size: cover; 
+    background-position: center;
+    height: 600px;
+     display: flex;
+}
+
+.banner h2{
+    justify-content: center;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
+    font-size: 40px;
+    font-weight: bold;
+    margin-top: 150px;
+}
+
+.banner h4{
+    justify-content: center;
+    font-size: 30px;
+    align-items: center;
 }
