--- a/style.css
+++ b/style.css
@@ -38,19 +38,40 @@ nav {
     background-size: cover; 
     background-position: center;
     height: 600px;
-     display: flex;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding-left: 50px;
 }
 
-.banner h2{
-    justify-content: center;
+.banner h2 {
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
     font-size: 40px;
     font-weight: bold;
-    margin-top: 150px;
+    margin: 10px 0;
 }
 
 .banner h4{
-    justify-content: center;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); 
     font-size: 30px;
-    align-items: center;
+    font-weight: bold;
+    margin: 10px 0;
 }
+
+.d{
+    color: #e47029;
+}
+
+.search-btn {
+    display: flex;
+    padding: 10px 20px;
+    margin: 10px;
+    border: none;
+    background-color: #e47029;
+    color: white;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
