--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ nav {
     background-position: center;
     height: 600px;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
@@ -46,14 +47,14 @@ nav {
 }
 
 .banner h2 {
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
+    text-shadow: 2px 2px 4px rgba(37, 37, 37); 
     font-size: 40px;
     font-weight: bold;
     margin: 10px 0;
 }
 
 .banner h4{
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); 
+    text-shadow: 1px 1px 2px rgba(37, 37, 37); 
     font-size: 30px;
     font-weight: bold;
     margin: 10px 0;
@@ -80,14 +81,12 @@ nav {
     justify-content: space-between;
     align-items: center;
     padding: 50px;
-    /* margin-top: 10px; */
+    flex-wrap: wrap;
 }
 
 .section1 .pasta img {
     width: 500px;
     height: auto;
-    /* border-radius: 10px; */
-    /* margin-right: 100px; */
 }
 
 .section1 .text {
@@ -113,25 +112,43 @@ nav {
 .special h1 {
     font-size: 36px;
     margin-bottom: 30px;
-    color: #e47029; 
+    color: #e47029;
 }
 
 .special .image {
     display: flex;
     justify-content: space-around;
-    flex-wrap: wrap; 
-    gap: 15px;
-    padding: 0 40px;
+    flex-wrap: wrap;
+    gap: 20px;
+    padding: 0 50px;
 }
 
-.special .image img {
+.special .item {
+    text-align: center; 
+    width: 200px;
+}
+
+.special .item img {
     width: 250px;
-    height: auto;
+    height: 350px;
     border-radius: 10px;
 }
 
-.special .image img:hover {
-    transform: scale(1.1); 
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3); 
+.special .item img:hover {
+    transform: scale(1.1);
+    box-shadow: 0 4px 15px rgb(41, 41, 41); 
     cursor: pointer;
 }
+
+.special .item h3 {
+    margin: 10px 0 5px;
+    font-size: 20px;
+    color: #333;
+}
+
+.special .item p {
+    font-size: 18px;
+    color: #e47029;
+    font-weight: bold;
+}
+
