--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ nav {
     margin: 10px 0;
 }
 
-.d{
+.banner strong{
     color: #e47029;
 }
 
@@ -152,3 +152,58 @@ nav {
     font-weight: bold;
 }
 
+.events {
+    background-color: #f9f9f9;
+    padding: 50px 0;
+    text-align: center;
+}
+
+.events h1 {
+    font-size: 36px;
+    margin-bottom: 30px;
+    color: #e47029;
+}
+
+.event-list {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 0 50px;
+    gap: 20px; 
+}
+
+.event {
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgb(104, 103, 103);
+    padding: 20px;
+    width: 300px;
+}
+
+.event:hover {
+    transform: scale(1.05);
+    box-shadow: 0 4px 20px rgba(0, 0, 0);
+}
+
+.event h3 {
+    font-size: 24px;
+    color: #333;
+    margin-bottom: 10px;
+}
+
+.event p {
+    font-size: 16px;
+    color: #666;
+    line-height: 1.5;
+}
+
+.event strong {
+    color: #e47029;
+}
+
+#footer {
+    background-color: #e3e3e390;
+    color: black;
+    padding: 10px;
+    text-align: center;
+}
