--- a/style.css
+++ b/style.css
@@ -55,13 +55,17 @@ nav {
 
 .banner h4{
     text-shadow: 1px 1px 2px rgba(37, 37, 37); 
-    font-size: 30px;
-    font-weight: bold;
+    font-size: 25px;
     margin: 10px 0;
 }
 
 .banner strong{
     color: #e47029;
+}
+
+.banner h5 {
+    font-size: 18px;
+    line-height: 2;
 }
 
 .search-btn {
