--- a/style.css
+++ b/style.css
@@ -149,8 +149,9 @@ nav {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    gap: 20px;
-    padding: 0 50px;
+    gap: 15px;
+    padding: 0 20px;
+    margin-right: 30px;
 }
 
 .special .item {
