--- a/style.css
+++ b/style.css
@@ -138,6 +138,7 @@ nav {
 }
 
 .section1 .text a {
+    width: 80px;
     color: white;
     text-decoration: none;
     margin-right: 100px;
@@ -271,4 +272,91 @@ nav {
     color: black;
     padding: 10px;
     text-align: center;
+}
+
+h1 {
+    text-align: center;
+    color: #000000;
+    margin-bottom: 20px;
+    font-size: 20px;
+}
+
+.gallery {
+    text-align: center;
+    margin-top: 50px;
+}
+
+.gallery-item {
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    text-align: center;
+    padding: 15px;
+}
+
+.gallery-item h1{
+    color: #e47029;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.gallery-item p{
+    color: #000000;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.gallery h1{
+    color: #e47029;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.gallery-item img {
+    width: 100%;
+    border-radius: 8px;
+}
+
+.interior-image {
+    width: 100%;
+    height: 800px;
+    object-fit: cover; 
+}
+
+.chefimages {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 15px;
+    padding: 0 20px;
+    margin-right: 30px;
+}
+
+.chefitems img {
+    display: flex;
+    flex-wrap: wrap;
+    width: 250px;
+    height: 350px;
+    border-radius: 10px;
+}
+
+.chefimages .chefitems h3 {
+    margin: 10px 0 5px;
+    font-size: 20px;
+    color: #333;
+    font-weight: bold;
+}
+
+.customer-images {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.customer-images img {
+    width: 100%;
+    max-width: 500px;
+    height: auto;
+    border-radius: 8px;
 }
