--- a/style.css
+++ b/style.css
@@ -295,19 +295,19 @@ h1 {
     padding: 15px;
 }
 
-.gallery-item h1{
+.gallery-item h1 {
     color: #e47029;
     font-size: 30px;
     font-weight: bold;
 }
 
-.gallery-item p{
+.gallery-item p {
     color: #000000;
     font-size: 30px;
     font-weight: bold;
 }
 
-.gallery h1{
+.gallery h1 {
     color: #e47029;
     font-size: 30px;
     font-weight: bold;
@@ -320,23 +320,30 @@ h1 {
 
 .interior-image {
     width: 100%;
-    height: 800px;
+    height: 800px; 
     object-fit: cover; 
 }
 
-.chefitems img {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    gap: 15px;
-    padding: 0 20px;
-    margin-right: 30px;
-    width: 250px;
-    height: 350px;
-    border-radius: 10px;
+.chefimages {
+    display: flex; 
+    justify-content: space-around; 
+    padding: 20px 0;
+    flex-wrap: wrap; 
 }
 
-.chefimages .chefitems h3 {
+.chefitems {
+    text-align: center; 
+    max-width: 400px;
+    margin: 10px; 
+}
+
+.chefitems img {
+    width: 100%; 
+    height: 400px; 
+    border-radius: 10px; 
+}
+
+.chefitems h3 {
     margin: 10px 0 5px;
     font-size: 20px;
     color: #333;
@@ -351,7 +358,7 @@ h1 {
 
 .customer-images img {
     width: 100%;
-    max-width: 500px;
+    max-width: 500px; 
     height: auto;
     border-radius: 8px;
 }
