--- a/style.css
+++ b/style.css
@@ -2,10 +2,12 @@ body{
     background-color: rgb(255, 255, 255);
     font-family: Arial, sans-serif;
     margin: 0;
-    padding: 0;
+    padding: 5px;
     max-width: 100vw; 
     overflow-x: hidden;
 }
+
+
 nav {
     display: flex;
     justify-content: space-between;
@@ -37,13 +39,13 @@ nav {
     margin-top: 0.1px;
     background-size: cover; 
     background-position: center;
-    height: 600px;
+    height: 600px; 
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    padding-left: 50px;
+    padding-left: 30px;
 }
 
 .banner1 {
@@ -63,7 +65,7 @@ nav {
     margin-top: 0.1px;
     background-size: cover; 
     background-position: center;
-    height: 600px;
+     height: 600px; 
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -201,8 +203,8 @@ nav {
 }
 
 .special .item img {
-    width: 250px;
-    height: 350px;
+     width: 250px;
+    height: 350px; 
     border-radius: 10px;
 }
 
