--- a/style.css
+++ b/style.css
@@ -492,6 +492,15 @@ h1 {
         padding: 20px;
     }
 
+    .banner h5{
+        font-size: 14px;
+        width: 500px;
+    }
+
+    .banner h2{
+        width: 50%;
+    }
+
     .section1 .pasta img {
         width: 100%;
         height: auto;
@@ -499,6 +508,7 @@ h1 {
 
     .special .image {
         justify-content: center;
+        gap: 70px;
     }
 
     .events .eventlist {
@@ -552,14 +562,26 @@ h1 {
         font-size: 10px;
         line-height: 1.5;
         text-align: left;
-        align-items: flex-start;
+        
     }
-
-    .banner a{
-        font-size: 10px;
+    .banner .btn2{
+        width: 70px;
+        font-size: 9px;
         padding: 10px 10px;
+        order :2;
+        
     }
-
+    .banner .btn{
+        display: flex;
+        height: 60px;
+        width: 170px;
+    }
+    .banner .btn1{
+        width: 70px;
+        font-size: 9px;
+        padding: 10px 10px;
+        order:1;
+    }
     .banner1 h4, .banner2 h1 {
         font-size: 24px;
     }
@@ -587,6 +609,9 @@ h1 {
         align-items: center;
     }
 
+    .event{
+        width: auto;
+    }
     .availableseats .seats {
         flex-direction: column;
     }
